feat: update to category page and search by category
